--- a/lang/fa.json
+++ b/lang/fa.json
@@ -2,6 +2,7 @@
     "(and :count more error)": "(و :count خطای دیگر)",
     "(and :count more errors)": "(و :count خطای دیگر)",
     "All rights reserved.": "کلیه حقوق محفوظ است.",
+    "Create": "ایجاد",
     "Forbidden": "عدم دسترسی",
     "Go to page :page": "برو به صفحه :page",
     "Hello!": "سلام!",
